--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 bokeh==1.3.4
 Click==7.0
 Flask==1.1.1
+Flask-SQLAlchemy==2.4.1
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 numpy==1.17.2
 packaging==19.2
-Pillow==6.1.0
+Pillow==6.2.0
+psycopg2==2.8.3
 pyparsing==2.4.2
 python-dateutil==2.8.0
 PyYAML==5.1.2
 six==1.12.0
+SQLAlchemy==1.3.8
 tornado==6.0.3
 Werkzeug==0.16.0
