--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 bokeh==1.3.4
 Click==7.0
 Flask==1.1.1
+Flask-Executor==0.9.3
 flask-heroku==0.1.9
 Flask-SQLAlchemy==2.4.1
 gunicorn==19.9.0
@@ -15,6 +16,6 @@ pyparsing==2.4.2
 python-dateutil==2.8.0
 PyYAML==5.1.2
 six==1.12.0
-SQLAlchemy==1.3.9
+SQLAlchemy==1.3.10
 tornado==6.0.3
 Werkzeug==0.16.0
