--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
-bokeh==1.3.4
-Click==7.0
+bokeh==2.0.1
+click==7.1.1
 Flask==1.1.1
 Flask-Executor==0.9.3
 flask-heroku==0.1.9
 Flask-SQLAlchemy==2.4.1
-gunicorn==19.9.0
+gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.10.3
+Jinja2==2.11.1
 MarkupSafe==1.1.1
-numpy==1.17.2
-packaging==19.2
-Pillow==6.2.0
-psycopg2==2.8.3
-pyparsing==2.4.2
-python-dateutil==2.8.0
-PyYAML==5.1.2
-six==1.12.0
-SQLAlchemy==1.3.10
-tornado==6.0.3
-Werkzeug==0.16.0
+numpy==1.18.2
+packaging==20.3
+Pillow==7.1.0
+psycopg2==2.8.4
+pyparsing==2.4.6
+python-dateutil==2.8.1
+PyYAML==5.3.1
+six==1.14.0
+SQLAlchemy==1.3.15
+tornado==6.0.4
+typing-extensions==3.7.4.1
+Werkzeug==1.0.1
